Fix long blog post titles on mobile devices

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -15,6 +15,10 @@
       flex-direction: column !important;
     }
 
+    span.blog-post-title {
+      min-width: auto !important;
+    }
+
     span.blog-post-date {
       margin: 0px !important;
       margin-top: 3px !important;
